<resources>
    <string name="app_name">Lab8</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="hint">login name</string>
    <string name="password">Password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What does this do?</string>
    <string name="dialog_message">Are you sure to exit?</string>
    <string name="dialog_title">Alert</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="SwitchOn">Switch is On</string>
    <string name="SwitchOff">Switch is Off</string>
    <string name="StartChat">Start Chat</string>
    <string name="send">Send</string>
    <string name="WeatherForecast">Weather Forecast</string>
    <string name="current_temp">Current:</string>
    <string name="min_temp">Minimum:</string>
    <string name="max_temp">Maximum:</string>
    <string name="delete_message">Delete this message</string>
    <string name="message_selected_info">Message:</string>
    <string name="message_selected_id">Message ID:</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_Toolbar">Test Toolbar</string>
    <string name="toolbar_one">One</string>
    <string name="toolbar_two">Two</string>
    <string name="toolbar_three">Three</string>
    <string name="toolbar_four">About</string>
    <string name="version_info">Version 1.0, by Zhan Shen</string>
    <string name="toolbar_dialog">New Message</string>
    <string name="snackbarMessage">You selected item 1.</string>
    <string name="toolbarDialogMessage">Do you want to go back?</string>
</resources>
