<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"

    android:rowCount="2"
    tools:context="com.example.exit.androidlabs.ListItemsActivity">

    <RadioButton android:text="@string/RadioButton"
        android:layout_columnWeight="1"
        android:gravity="fill" />

    <CheckBox android:text="@string/CheckBox"
        android:layout_columnWeight="1"
        android:gravity="fill" />

    <Switch android:text="@string/Switch"
        android:layout_columnWeight="1"
        android:gravity="fill" />

    <ImageButton android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill" />

</GridLayout>
